@@ -1,3 +1,7 @@
+2000-08-27  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* usecode.cc: Mark/recall spells supported.
+
 2000-08-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 
 	* exult.cc/usecode.cc: mark location on map (also on teleport map)
